[package]
name = "db_lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.6.2"
serde = "1.0.189"
serde_yaml = "0.9.25"
tokio = "1.33.0"
futures = "0.3.28"
uuid = { version = "1.4.0", features = ["v4"] }
rand = { version = "0.8.5", features = [] }